3.1.1

- New thin adapter SignedObject2LongFunctionStringMap to adapt the new
  Sux4J self-signing functions to the StringMap (big) interface. The
  adapter implements also a constructor based on an Iterable that
  can be used directly with MG4J's IndexBuilder.

3.1.0

- MinimalPerfectHashFunction, MWHCFunction,
  LcpMonotoneMinimalPerfectHashFunction,
  TwoStepsLcpMonotoneMinimalPerfectHashFunction and
  ZFastTrieDistributorMonotoneMinimalPerfectHashFunction have now built-in
  signing. The effort was relatively small, and the gain in speed is huge,
  as we can use part of the hash computed by the ChunkedHashStore as a
  signature.

- New "dictionary" option in MWHCFunction which stores the signature as a
  value. It gives the fastest and most compact probabilistic dictionary.

- Big switch to builders for MinimalPerfectHashFunction, MWHCFunction,
  TwoStepsMWHCFunction, LcpMonotoneMinimalPerfectHashFunction,
  TwoStepsLcpMonotoneMinimalPerfectHashFunction and
  ZFastTrieDistributorMonotoneMinimalPerfectHashFunction. As a final goal,
  all multiple constructors will be eliminated in favour of Guava-style static
  nested Builder classes.

- Major speed improvements in
  ZFastTrieDistributorMonotoneMinimalPerfectHashFunction.

3.0.11

- Now we use XorShift1024StarRandom everywhere.

3.0.10

- New parameter to MWHCFunction makes it possible to build arbitrary
  functions from the command line.

3.0.9

- Added for efficiency a lowerBitsMask field to
  EliasFanoMonotoneLongBigList, which made it necessary to bump the
  serialVersionUID.

- Aligned the behaviour of EliasFanoMonotoneLongBigList with that of
  MG4J's implementation--the upper bound is not necessarily strict.

- Fixed subtle bug in ChunkedHashStore that could cause an out-of-bounds
  access to an array in the (very rare) case of a retry.

- The documentation of Jenkins hashes was still stating, erroneously,
  that we return the first computed value (we return the third one).
